birthday fields in account creation page css fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1440,10 +1440,14 @@ div.noOrg-container {
   max-width: 100%;
   border: solid 2px #F1F1F1;
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-}
-
-.create-account-container .name-section {
-  padding-bottom: 0;
+  .name-section {
+    padding-bottom: 0;
+  }
+  #bdGroup {
+    margin-bottom: 0.1em;
+    padding-bottom: 0;
+    min-height: 120px;
+  }
 }
 .left-indent-bottom {
   margin-left: 3.2em;
