--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1343,6 +1343,11 @@ div.noOrg-container span {
 .create-account-container .name-section {
   padding-bottom: 0;
 }
+.create-account-container #bdGroup {
+  margin-bottom: 0.1em;
+  padding-bottom: 0;
+  min-height: 120px;
+}
 .left-indent-bottom {
   margin-left: 3.2em;
 }
