remove study id from non-patient profile, initial queries css fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -11,6 +11,13 @@
 /**
  *  Font-family
  **/
+@font-face {
+    font-family: "symbols";
+    src: url("../fonts/symbols.eot");
+    src: url("../fonts/symbols.eot?#iefix") format("eot"), url("../fonts/symbols.svg#symbols") format("svg"), url("../fonts/symbols.woff2") format("woff2"), url("../fonts/symbols.woff") format("woff"), url("../fonts/symbols.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -243,7 +250,7 @@ select:not([multiple]) {
   color: #494e37;
   width: 200px;
   border: solid 1px #d0cdcd;
-  margin-left: 4em;
+  margin-left: 3.5em;
   z-index: 11;
   background-color: #FFF;
   overflow-y: auto;
@@ -460,12 +467,12 @@ div.right-panel {
   left: 0;
   color: #fff;
   display: block;
-  height: 5.5em;
+  height: 6em;
   line-height: 58px;
   background-color: #FFF;
   background: linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
   border-bottom: 1px solid #FBFBFA;
-   border-top: 1px solid rgba(203, 210, 217, 0.2);
+  border-top: 1px solid rgba(203, 210, 217, 0.2);
   border-left: 1px solid rgba(203, 210, 217, 0.2);
   font-size: 1.2em;
 }
@@ -474,9 +481,9 @@ div.right-panel {
    border-radius: 100%;
    width: 52px;
    height: 52px;
-   font-size: 3em;
+   font-size: 1.3em;
    line-height: 1;
-   content: "\2304";
+   content: "\EA03";
    display: inline-block;
    font-family: "symbols";
    font-style: normal;
@@ -486,7 +493,7 @@ div.right-panel {
    -webkit-font-smoothing: antialiased;
    color: #ccc;
    position: absolute;
-   top: 0.8em;
+   top: 2.8em;
    left: 0;
    right: 0;
    margin-left: auto;
@@ -900,7 +907,7 @@ div.right-panel {
   -moz-transition: height 0.8s ease-in;
   transition: height 0.8s ease-in;
 }
-#fullSizeBox .headline, 
+#fullSizeBox .headline,
 #fullSizeBox .headline * {
   letter-spacing: 1px;
 }
@@ -1790,6 +1797,9 @@ sub.pointer:hover {
 }
 .tooltip.left .tooltip-arrow {
   border-left-color: #575a4d;
+}
+#consentContainer .fade {
+  transition: opacity .45s ease-out;
 }
 #consentContainer .consent {
   display: none;
