--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -4,7 +4,7 @@
     <h4 class="tnth-headline">Patient List</h4>
     <br/>
     <div id="patientListOptions">
-      <a href="{{ url_for('patients.profile_create') }}"><button id="createUserLink" class="btn btn-lg">{{ _("Create a patient record") }}</button></a href="{{ url_for('patients.profile_create') }}">
+      <a href="{{ url_for('patients.patient_profile_create') }}"><button id="createUserLink" class="btn btn-lg">{{ _("Create a patient record") }}</button></a>
       <div class="or">or</div>
       <span class="profile-item-title">{{ _("Select a patient below to view or update details.") }}</span>
     </div>
